# Agent-Eval-MVP-main

./: .env.example  .gitignore  AGENT_NAMING_PATTERN.md  FEATURES_SUMMARY.md  OBSERVABILITY_PLATFORM_DESIGN.md  PRODUCTION_PLAN.md  QUICKSTART_UI.md  README.md  TRAVEL_ORCHESTRATOR_EXPLAINED.md  TROUBLESHOOTING.md  UI_FLOW_VISUAL.md  _diag.py  check_traces.py  debug_contextual_relevancy.py  demo_agentic_eval.py  health_check.py  pyproject.toml  show_stored_data.py  start-eval  start.sh  stop-eval  test_autoselect.py  test_contextual_fix.py  test_debug.py  test_debug_flow.py  test_final.py  test_langsmith_tracing.py  test_llm_connection.py  test_orch_eval.py  test_quick_test.py  test_step4_metrics.py  test_step5_rca.py  test_step6_healing.py  test_step7_gate.py  test_tool_metrics.py  test_trace_flow.py  test_ui_fix.py  testrx_prep.md  view_traces.py
.claude/skills/: 00-Enterprise-Agent-Eval-Charter.md  API-Backend-Engineer.md  Agent-Integration-Engineer.md  CLI-Test-Runner-Engineer.md  Data-Model-Architect.md  DevOps-Reliability-Engineer.md  Evaluation-Engine-Architect.md  Frontend-UI-Engineer.md  Principal-Engineer.md  RAG-Knowledge-Base-Engineer.md  Report-Generation-Engineer.md  Security-Auth-Architect.md  Statistical-Analysis-Engineer.md  Test-Suite-Designer.md
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: deploy.yaml
KB/: employee_benefits_faq.md  leave_policy.md
agent_eval/: __init__.py  cli.py
agent_eval/core/: __init__.py  context_generator.py  deployment_gate.py  evaluator.py  executor.py  file_parser.py  introspector.py  models.py  otel_tracing.py  ragas_evaluator.py  rca.py  scorecard.py  (+9 more)
docs/: AGENT_TYPES_RESEARCH.md  DEVELOPER_GUIDE.md  Lilly_Agent_Eval_Developer_Guide.docx  USER_GUIDE.md  YAML_TESTS.md  generate_word_doc.py
sample_agents/: README.md  __init__.py  api.py  auth_test_agent.py  calculator_agent.py  compliance_agent.py  conversational_agent.py  example_agent.py  policy_lookup_agent.py  smart_rag_agent.py  summarizer_agent.py  travel_orchestrator.py  weather_agent.py  wiki_agent.py
tests/: __init__.py  agent_aware_conversational_tests.yaml  agent_aware_orchestrator_tests.yaml  conversational_beginner_suite.yaml  conversational_framework_suite.yaml  conversational_memory_test.json  conversational_tests.yaml  demo_tests.yaml  hr_pipeline_chain_tests.yaml  hr_policy_tests.yaml  hr_rag_framework_suite.yaml  orchestrator_demo_tests.yaml  rag_tests.yaml  security_tests.yaml
workflows/: travel_demo.yaml
(+21 files in other folders)
